<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inscription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brondoua.helloworld.InscriptionActivity">

    <TextView
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/logintext"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_row="1"
        android:layout_column="1" />

    <EditText
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Brice"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/text_login"
        android:textAlignment="center"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:text="@string/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwdtext"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_above="@+id/button_submit"
        android:layout_centerHorizontal="true"
        android:layout_row="3"
        android:layout_column="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="pwd"
        android:ems="10"
        android:id="@+id/text_pwd"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/pwdtext"
        android:layout_row="4"
        android:layout_column="1"
        android:textAlignment="center"
        />

    <Button
        android:text="@string/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:text="@string/title_activity_inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_row="0"
        android:layout_column="1" />
</GridLayout>
