<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_ball"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brondoua.helloworld.WelcomeBallActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:typeface="normal"
        android:ellipsize="none"
        android:foregroundGravity="top|bottom"
        android:shadowColor="@android:color/black"
        android:background="@android:color/background_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <TextView
        android:text="@string/velocityX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:id="@+id/editText3"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:text="@string/velocityY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:id="@+id/textView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:id="@+id/editText4"
        android:layout_alignEnd="@+id/textView9" />

    <TextView
        android:text="@string/maxme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/maxyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_jeux" />
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/rl"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        >
        <TextView
            android:text="HELLO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="133dp"
            android:layout_marginTop="55dp"
            android:id="@+id/textView4" />
    </RelativeLayout>
</RelativeLayout>
